--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,19 @@
   <title>Document</title>
 </head>
   <body>
-    <dir>
+    <div>
+      <form action="submit">
+        <input type="text" id="inputText">
+      </form>
+    </div>
+    <div>
       <h3>Memo App Using mySQL</h3>
-      <button id="myButton">Click to fetch data</button>
+      <button id="btnFetchAll">Click to fetch data</button>
+      <button id="btnEditEntry">Click to edit data</button>
       <h3 id="outputText"></h3>
-    </dir>
+      <table id="outputTable">
+      </table>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
